chore: filtering params should be snake case
