# app/Http/Requests/Api/User/IndexRequest.php
@@ -8,29 +8,14 @@ use Illuminate\Foundation\Http\FormRequest;
 
 final class IndexRequest extends FormRequest
 {
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize(): bool
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
     public function rules(): array
     {
         return [
-            'name'    => ['sometimes', 'string', 'max:191'],
-            'email'   => ['sometimes', 'string', 'max:191'],
-            'sortBy'  => ['sometimes', 'string', 'in:name,email'],
-            'desc'    => ['sometimes', 'boolean'],
-            'perPage' => ['sometimes', 'integer', 'min:1', 'max:100'],
+            'name'     => ['sometimes', 'string', 'max:191'],
+            'email'    => ['sometimes', 'string', 'max:191'],
+            'sort_by'  => ['sometimes', 'string', 'in:name,email'],
+            'desc'     => ['sometimes', 'boolean'],
+            'per_page' => ['sometimes', 'integer', 'min:1', 'max:100'],
         ];
     }
 }
